Fix channels : displayname overflow

--- a/website/src/webroot/style/channels.css
+++ b/website/src/webroot/style/channels.css
@@ -129,3 +129,17 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+#channels .streamer-name {
+    overflow: hidden;
+}
+
+#channels .streamer-name > * {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+#channels .card-first-line {
+    gap: calc(var(--gap) * 0.15);
+}
